--- a/styles.html
+++ b/styles.html
@@ -514,21 +514,21 @@
     width: 45px;
     height: 45px;
   }
+  #empty_state_repo{
+    display: none;
+  }
 
   /* User view */
 
   #create_repo_dialog{
-    width: 350px;
+    width: 300px;
     border-radius: 2px;
     padding: 5px;
     margin: 0;
   }
-  .create_repo_icon_container{
-    height: 250px;
-  }
   .create_repo_description{
-    margin: 20px 0;
-    font-size: 18px;
+    margin-top: 25px;
+    margin-bottom: 15px;
   }
 
   #empty_state_project{
