--- a/styles.html
+++ b/styles.html
@@ -295,6 +295,7 @@
   }
   .save_button_white{
     color: white;
+    font-size: 14px;
   }
   paper-tooltip{
     text-align:center;
@@ -335,12 +336,6 @@
     }
   }
 
-  #generate_prototype_dialog{
-    width: 400px;
-    border-radius: 2px;
-    padding: 5px;
-    margin: 0;
-  }
   #generate_prototype_dialog paper-input{
     margin-top: 2px;
     margin-bottom: 20px;
@@ -357,7 +352,9 @@
     color: var(--polytipe-accent-color);
   }
   .prototype_description{
-    margin: 20px 0;
+    color: #888;
+    font-size: 13px;
+    line-height: 13px;
   }
 
   /* Drawer toolbar */
@@ -470,9 +467,6 @@
     right: 0;
     width: 100px;
     margin: auto;
-  }
-  #sign_in_fail_toast paper-button{
-    color: var(--polytipe-accent-color);
   }
   .sign_in_icon_container{
     height: 280px;
@@ -609,6 +603,7 @@
   }
   .toasts paper-toast paper-button{
     width: 30px;
+    color: var(--polytipe-accent-color);
   }
 
   /*Screens view*/
