--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
   <!-- Chrome / Android -->
   <meta id="bar" name="theme-color" content="#212121">
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="theme-color" content="black">
-  <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192_dark.png">
+  <meta name="theme-color" content="#212121">
+  <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
+  <link rel="icon" sizes="72x72" href="images/touch/icon-72x72.png">
 
   <!-- Web Application Manifest -->
   <link rel="manifest" href="manifest.json">
@@ -58,7 +59,7 @@
 
 <body class="fullbleed main">
   <template id="app" is="dom-bind">
-    <paper-drawer-panel id="drawer_panel_wrapper" edge-swipe-sensitivity="15" force-narrow drawer-toggle-attribute="paper-drawer-left">
+    <paper-drawer-panel id="drawer_panel_wrapper" disable-swipe force-narrow drawer-toggle-attribute="paper-drawer-left">
       <paper-header-panel drawer mode="seamed">
         <div id="drawer_toolbar" class="sidebar_polytipe_toolbar layout horizontal center-center">
             <iron-image id="avatar" alt="{{user}}" src="{{avatar}}" preload fade></iron-image>
@@ -321,7 +322,7 @@
           </section>
 
           <section id="screen_editor">
-            <paper-drawer-panel id="editor_drawer" right-drawer edge-swipe-sensitivity="15" drawer-width="290px" drawer-toggle-attribute="paper-drawer-right">
+            <paper-drawer-panel id="editor_drawer" right-drawer disable-swipe drawer-width="290px" drawer-toggle-attribute="paper-drawer-right">
               <paper-scroll-header-panel drawer id="sidebar_frame">
                 <paper-scroll-header-panel class="sidebar_panel" fixed>
                   <paper-tabs noink attr-for-selected="name" class="sidebar_tabs paper-header" selected="{{screen_editor_top_mode}}">
@@ -412,7 +413,7 @@
                 </paper-scroll-header-panel>
               </paper-scroll-header-panel>
 
-              <paper-header-panel main id="editor_frame" class="main_frame" mode="seamed">
+              <paper-header-panel main id="editor_frame" class="main_frame" mode="waterfall">
                 <paper-toolbar id="editor_toolbar" class="screen_view_toolbar">
                   <paper-icon-button id="editor_back_button" class="back_icon" icon="arrow-back" onclick="goto('project_view')"></paper-icon-button>
                   <template is="dom-if" if="{{preview_mode}}">
