Fix attempt for creating the prototype the first time

--- a/index.html
+++ b/index.html
@@ -752,6 +752,7 @@
           <paper-button noink>Ver</paper-button>
         </a>
       </paper-toast>
+      <paper-toast id="deleted_repo_toast" duration="3500" text="El repositorio fue eliminado de tu cuenta"></paper-toast>
       <paper-toast id="prototype_toast" duration="3500" text="Se generó el prototipo del proyecto {{selected_project}}">
         <a tabindex="-1" href="https://{{user}}.github.io/polytipe-projects" target="_blank">
           <paper-button noink>Ver</paper-button>
